# gtk-android

./: .gdbinit  README.md  android_armv7_cross.txt  android_armv8_cross.txt  meson.build
subprojects/: gtk.wrap  linux-util.wrap  pcre.wrap
